--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             point=point+10;
         }
         
-document.write("Вы набрали "+point+ " баллов");
+document.write("Типа вроде как ты набрала  "+point+ " баллов");
 
 
 
